--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@canvasjs/angular-charts": "^1.0.3",
+    "@canvasjs/charts": "^3.7.24",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "rxjs": "~7.8.0",
