--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@canvasjs/charts": "^3.7.24",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "date-fns": "^2.30.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
