--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "date-fns": "^2.30.0",
+    "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
