--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "bootstrap-icons": "^1.11.1",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.1",
+    "ngx-paypal": "^11.0.0",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.32",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
