--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^2.30.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
+    "slugify": "^1.6.6",
     "sweetalert2": "^11.7.32",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
