--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@canvasjs/angular-charts": "^1.0.3",
     "@canvasjs/charts": "^3.7.24",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "date-fns": "^2.30.0",
