Revert "configure proxy for API calls"
This reverts commit d746b416c0205b79585000c69754170a117d37c3.

--- a/angular.json
+++ b/angular.json
@@ -71,8 +71,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "disableHostCheck": true,
-            "proxyConfig": "src/proxy.conf.json"
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
