--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-icons": "^1.11.1",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.1",
+    "rss-parser": "^3.13.0",
     "rxjs": "~7.8.0",
     "slugify": "^1.6.6",
     "sweetalert2": "^11.7.32",
