--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "karma start"
   },
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/material": "^16.2.7",
+    "@angular/material": "^16.2.14",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -27,8 +27,10 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "chart.js": "^4.4.6",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.1",
+    "ng2-charts": "^6.0.1",
     "ngx-paypal": "^11.0.0",
     "owl.carousel": "^2.3.4",
     "rss-parser": "^3.13.0",
@@ -39,17 +41,25 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.1",
+    "@angular-builders/jest": "^18.0.0",
+    "@angular-devkit/build-angular": "^16.2.16",
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.29",
     "jasmine-core": "~4.6.0",
+    "jest": "^29.7.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.1.3"
+    "karma-typescript": "^5.5.4",
+    "karma-webpack": "^5.0.1",
+    "ts-jest": "^29.2.5",
+    "typescript": "~5.1.3",
+    "webpack": "^5.96.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
