--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^4.4.6",
+    "cypress": "^13.15.2",
     "date-fns": "^2.30.0",
     "jquery": "^3.7.1",
     "ng2-charts": "^6.0.1",
