--- a/angular.json
+++ b/angular.json
@@ -34,8 +34,10 @@
               "src/sitemap.xml"
             ],
             "styles": [
-      "node_modules/bootstrap/dist/css/bootstrap.min.css",
-      "@angular/material/prebuilt-themes/purple-green.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap/scss/bootstrap.scss",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.scss"
             ],
             "scripts": [
